using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Assets.Code.Scripts {

    public static class Constants {
        public const string IS_GROUNDED_STATE = "isGrounded";
        public const string IS_JUMPING_STATE = "isJumping";
        public const string IS_DOUBLE_JUMPING_STATE = "isDoubleJumping";
        public const string SPEED = "Speed";

        public const string LEFT_JOY_HORIZONTAL = "LeftJoystickHorizontal";
        public const string LEFT_JOY_VERTICAL = "LeftJoystickVertical";
        public const string Y_BUTTON = "Y-Button";
        public const string B_BUTTON = "B-Button";
        public const string A_BUTTON = "A-Button";
        public const string X_BUTTON = "X-Button";
        public const string LEFT_TRIGGER = "LeftTrigger";
        public const string RIGHT_TRIGGER = "RightTrigger";

        public const string PLAYERS_OBJECT = "Players";
        public const string GROUND_LAYER = "Ground";
    }
}
